--- a/server/config.json
+++ b/server/config.json
@@ -1,9 +1,9 @@
 {
-  "rds_host": "",
-  "rds_port": "",
-  "rds_user": "",
-  "rds_password" : "",
-  "rds_db": "",
-  "server_host": "",
-  "server_port":""
+  "rds_host": "finalproject.cujum7hj0tiz.us-east-1.rds.amazonaws.com",
+  "rds_port": "3306",
+  "rds_user": "admin",
+  "rds_password" : "adminadmin",
+  "rds_db": "FINAL_PROJECT",
+  "server_host": "localhost",
+  "server_port":"8080"
 }
