--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
+    "sjcl": "^1.0.8",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
