--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "aws-sdk": "^2.1338.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "sjcl": "^1.0.8",
