need one more query

--- a/client/src/config.json
+++ b/client/src/config.json
@@ -1,4 +1,5 @@
 {
   "server_host": "localhost",
-  "server_port": "8080"
+  "server_port": "8080",
+  "apiKey": "AIzaSyBiQxXOFhKyV-xlXCyFoBAIgshY5UhM7i8"
 }
