--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "test": "jest --coverage"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.321.1",
     "aws-sdk": "^2.1338.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
