--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "main": "server.js",
+  "description": "Node.js using Docker",
+  "author": "Jiwoong Matt Park <mtp0326@seas.upenn.edu>",
   "scripts": {
     "start": "nodemon server.js",
     "test": "jest --coverage"
@@ -11,6 +13,8 @@
     "@aws-sdk/client-dynamodb": "^3.321.1",
     "aws-sdk": "^2.1338.0",
     "cors": "^2.8.5",
+    "daemon": "^1.1.0",
+    "docker": "^1.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
